--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -97,10 +97,10 @@ cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx
 cron "0 8 1-31/1 4 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=⚠️女装盲盒
 cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️金口碑奖投票
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, img-url=https://qxzy.top/rules/QuantumultX/img/ygkc.png, enabled=true, tag=阳光矿场
-cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
+cron "12 12 24-26 3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, enabled=true, tag=⚠️一加盲盒
 cron "5 8,14,20 11-17 5 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_mother_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jump-jump.png, enabled=true, tag=母婴跳一跳
-cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_lenovo.png, enabled=true, tag=⚠️联想集卡活动
+cron "12 15 15-29 3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_lenovo.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_lenovo.png, enabled=true, tag=联想集卡活动
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_xtg.png, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领现金兑换红包
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, img-url=https://raw.githubusercontent.com/i-chenzhe/qx/master/img/icon.png, enabled=true, tag=京东洗护发超级品类日
@@ -108,10 +108,10 @@ cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzh
 cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_live.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东直播
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, img-url=https://ae01.alicdn.com/kf/Uff0a0bb9e66a479591c9b02c176fd276A.jpg, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, img-url=https://qxzy.top/rules/QuantumultX/img/sqxs.png, enabled=true, tag=书旗小说
-cron "10 10 16-18 * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_xmf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_xmf.png, enabled=true, tag=京东小魔方
+cron "10 10 16-18 * *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_xmf.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_xmf.png, enabled=true, tag=京东小魔方
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, img-url=https://qxzy.top/rules/QuantumultX/img/fqxs.png, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, img-url=https://qxzy.top/rules/QuantumultX/img/cfz.jpg, enabled=true, tag=春风转
-cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️美的家电节
+cron "15 10 26-31 2,3 *" script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_unionPoster.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=美的家电节
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, img-url=https://ae01.alicdn.com/kf/Uda8ecbbe50444fe293b538cbccf9d719q.jpg, enabled=true, tag=哈喽短视频
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, img-url=https://ae01.alicdn.com/kf/U1680ecdfa17544669c71e00400c542e31.jpg, enabled=true, tag=幸运赚点
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级品类日
