--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/xpread.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱
 cron "8 8 8 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xm.js, img-url=https://qxzy.top/rules/QuantumultX/img/xm.png, enabled=true, tag=小芒
 cron "11 11 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/shzx.js, img-url=https://qxzy.top/rules/QuantumultX/img/shzx.png, enabled=true, tag=搜狐资讯
 cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=探秘无限星空
