--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,10 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "30 20-23/1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东半点京豆雨龙猪猪
+cron "1 0-23/1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东整点京豆雨龙猪猪
+cron "10 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/adolf_hf.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东合肥旗舰店开业（一次性活动）
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Udd9cb36174cf41a7a69e28a643a360a9a.jpg, enabled=true, tag=动物研究院
 cron "20 10 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/xpread.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/xp.png, enabled=true, tag=笑谱阅读Ariszy
 cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/CenBoMin/GithubSync/main/ELECV2PJS/PushBoxjsCookie_elecV2p.js, img-url=https://cdn.jsdelivr.net/gh/sngxpro/QuanX@master/pic/jiejie.png, enabled=true, tag=手机boxjs的Cookie自动上传V2p
 cron "0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/ztxtop/x/aa4ddeca813fbf5c231dd4adaec68a7632cb292c/jx_cfdtx.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enabled=true, tag=京喜财富岛提现并发修改版ztxtop
@@ -77,8 +81,6 @@ cron "0 6 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.c
 cron "0 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=新亚链
 cron "35 12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/xbgg.js, img-url=https://ae01.alicdn.com/kf/U466ffce93b584c5babd1127f32f5ddebX.jpg, enabled=true, tag=讯播广告
 cron "35 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/tpyqc.js, img-url=https://ae01.alicdn.com/kf/Uf51ecfcc4b0949e18441fc3f3f4919ede.jpg, enabled=true, tag=太平洋汽车网
-cron "10 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/sphz.js, img-url=https://ae01.alicdn.com/kf/U6fe8c098a65740039ac7767867746c4aK.jpg, enabled=true, tag=视频号互助
-cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东整点京豆红包雨
 cron "0 0 0/4 * * ?" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/zb.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=左边
 cron "1 7,12,19 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_beauty.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东美丽研究院
 cron "20 9-22 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/age174/-/main/jjrm.js, img-url=https://ae01.alicdn.com/kf/Uf3f262fb6d81492a8e350a0bb97a04a0g.jpg, enabled=true, tag=久金人脉
