--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
+cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/xpread.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱
 cron "8 8 8 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xm.js, img-url=https://qxzy.top/rules/QuantumultX/img/xm.png, enabled=true, tag=小芒
