--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_03.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东一次性入会领豆3
+cron "0 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_02.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/monk.png, enabled=true, tag=京东一次性入会领豆2
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "0 30 7,10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
 cron "30 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东半点京豆雨龙猪猪
