--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -147,6 +147,7 @@ BiliBili_我的页面处理 = type=http-response,script-path=https://raw.githubu
 
 # 京东开屏广告
 京东_开屏去广告 = type=http-response,script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/startup/startup.js,pattern=^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=start,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+京东比价 = type=http-response,script-path=https://raw.githubusercontent.com/JDHelloWorld/jd_price/main/jd_price.js,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 #-淘宝比价 (trade-acs.m.taobao.com)
