--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -8,6 +8,7 @@ cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/
 cron "0 30 7,10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=http://nm66.top/1.jpg, enabled=true, tag=柠檬咕咚步数红包
 cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=hrl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=rl=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
@@ -130,7 +131,7 @@ cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/x
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级品类日
 cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_live_redrain_half.png, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领现金自动获得酬劳
-cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_global.png, enabled=true, tag=⚠️环球挑战赛
+cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_global.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_global.png, enabled=true, tag=环球挑战赛
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_jxd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jxd.png, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, img-url=https://qxzy.top/rules/QuantumultX/img/pyq.png, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_marketLottery.png, enabled=true, tag=⚠️京东超市-大转盘
@@ -156,7 +157,7 @@ cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quant
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, img-url=https://qxzy.top/rules/QuantumultX/img/jukan.png, enabled=true, tag=聚看点
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/TT.js, img-url=https://qxzy.top/rules/QuantumultX/img/TT.png, enabled=true, tag=TT语音签到
 cron "1 1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东全民开红包
-cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
+cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_cfdtx.js, img-url=https://qxzy.top/rules/QuantumultX/img/jx_cfdtx.png, enabled=true, tag=京喜财富岛提现
 cron "30 8,13,19 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "11 1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=false, tag=京东抽奖机
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, enabled=true, tag=⚠️京小超领蓝币
@@ -336,6 +337,8 @@ cron "59 23 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/m
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Naixue/Naixue.js, img-url=https://qxzy.top/rules/QuantumultX/img/Naixue.png, enabled=true, tag=奈雪
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/ZMTeacher/ZMTeacher.js, img-url=https://qxzy.top/rules/QuantumultX/img/ZMTeacher.png, enabled=true, tag=掌门好老师
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/elem/elemCheckIn.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么-打卡领红包
+cron "10 00 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/eleme/eleme_daily.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么领豆（超级吃货卡抓ck）
+cron "00 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/eleme/eleme_mission.js, img-url=https://qxzy.top/rules/QuantumultX/img/elem.png, enabled=true, tag=饿了么会员任务（超级吃货卡抓ck）
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/Oclean/Oclean.js, img-url=https://qxzy.top/rules/QuantumultX/img/Oclean.png, enabled=true, tag=欧可林
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/heybox/heybox.js, img-url=https://qxzy.top/rules/QuantumultX/img/heybox.png, enabled=true, tag=小黑盒
 cron "0 0 0 * * ?" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/sony/sonyClub.js, img-url=https://qxzy.top/rules/QuantumultX/img/SONY.png, enabled=true, tag=索尼俱乐部
