--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,7 +2,7 @@
 # 挂v更新https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
-cron "40 9-18/3 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_star.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=家电星推官
+cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=家电星推官
 cron "15 9 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_jxhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东京喜阶梯红包
 cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_newInteraction.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=618大势新品赏
 cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_superbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东超级盒子
@@ -14,7 +14,7 @@ cron "0 0 0/4 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/m
 cron "15 9,20 * 5,6 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_superbox.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东超级盒子
 cron "5 * * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=动物联萌
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=注销京东会员卡
-cron "2 0-18/6 * 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东手机狂欢城
+cron "2 0-18/6 * 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=⚠️京东手机狂欢城
 cron "0 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_city.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=城城领现金
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xsg.js, img-url=https://qxzy.top/rules/QuantumultX/img/xsg.png, enabled=true, tag=薪时光
 cron "1 0,11,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=跳跳乐瓜分京豆
